--- a/styles/style.css
+++ b/styles/style.css
@@ -182,3 +182,56 @@ body {
     width: 100%;
     height: auto;
 }
+
+/* Access */
+
+.access {
+    padding: 100px 50px;
+    display: flex;
+    background-color: hsl(238, 22%, 44%);
+}
+
+.access__info {
+    flex: 1;
+}
+
+.access__title {
+    font-size: 32px;
+    font-weight: bold;
+    font-family: "Raleway", sans-serif;
+    color: hsl(240, 75%, 98%);
+}
+
+.access__desc {
+    margin-top: 20px;
+    max-width: 500px;
+    color: hsl(240, 75%, 98%);
+    line-height: 1.5;
+}
+
+.access__form {
+    flex: 1;
+    padding-top: 10px;
+}
+
+.access__email {
+    max-width: 500px;
+    width: 100%;
+    padding: 15px 20px;
+    border-radius: 3px;
+    border: 0;
+    box-shadow: 0 0 4px hsla(0, 0%, 0%, .2);
+}
+
+.access__submit {
+    display: block;
+    margin-top: 15px;
+    padding: 15px 25px;
+    color: hsl(240, 75%, 98%);
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+    background-color: hsl(224, 93%, 58%);
+    border: 0;
+    border-radius: 3px;
+    box-shadow: 0 0 5px hsla(0, 0%, 0%, .2);
+}
