--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,14 @@ body {
 
 /* Header */
 
+.header {
+    background-image: url("../images/bg-curve-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+    padding-bottom: 200px;
+}
+
 .header__nav {
     padding: 50px;
     display: flex;
